# 3d-renderer

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon
src/: Color.hpp  Color.zig  ColorBuffer.cpp  ColorBuffer.hpp  Matrix.zig  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Triangle.cpp  Triangle.hpp  Vec2.cpp  Vec2.hpp  Vec2.zig  Vec3.cpp  Vec3.hpp  Vec3.zig  Vec4.zig  color.h  color.hpp  color.zig  colorbuffer.zig  display.c  display.h  main.c  main.cpp  main.zig  mesh.c  mesh.h  mesh.zig  renderer.zig  texture.zig  triangle.c  triangle.h  triangle.zig  vec2.zig  vec3.zig  vector.c  vector.h
